# rust-websocket

./: Cargo.toml  client.html  scrape.py
src/: client_id.rs  frame.rs  main.rs  message.rs  websocket.rs
